Fix quotes and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
   background-color: #fdf6e3;
 }
 
-header, footer{
+header, footer {
   font-size: 1.5rem;
 }
 
@@ -19,7 +19,7 @@ nav ul {
 }
 
 #contents, #favs, #facts, #types {
-color: #93a1a1;
+  color: #93a1a1;
 }
 
 .wrapper > .dfn {
@@ -30,11 +30,11 @@ p + strong {
   color: #fff;
 }
 
-a:not(.no-highlight){
+a:not(.no-highlight) {
   background-color: #719e07;
 }
 
-a [rel=external]{
+a [rel="external"] {
   background-color: #2694d8;
 }
 
